Team leave calendar entries overlap menu bugfix (#5669)
Z-index moved to main menu container and initial container
position set to relative.

--- a/src/Opit/Notes/CoreBundle/Resources/public/css/menu.scss
+++ b/src/Opit/Notes/CoreBundle/Resources/public/css/menu.scss
@@ -8,6 +8,7 @@
 #menu {
     list-style:none;
     display:inline;
+    position:relative;
     max-width:790px;
     text-align: right;
     height:50px;
@@ -16,6 +17,7 @@
     padding: 0 10px 0 10px;
     margin: -3px 3px 0 0;
     line-height: 30px;
+    z-index: 99;
     @include box-sizing(border-box);
     
     &.clone {
@@ -24,7 +26,7 @@
         display:none;
         width:100%;
         max-width:100%;
-       @include box-shadow(2px, 2px, 2px, 1px, rgba(150, 150, 150, .6));
+        @include box-shadow(2px, 2px, 2px, 1px, rgba(150, 150, 150, .6));
     }
     
     li {
@@ -36,7 +38,6 @@
         margin-right:50px;
         margin-top:7px;
         border:none;
-        z-index: 99;
 
         &:hover {
             border: 1px solid #777777;
